correctifs mobile + version tablette

--- a/style.css
+++ b/style.css
@@ -125,6 +125,10 @@ header
     padding: 16px;
     border-radius: 0 10px 10px 0;
 }
+.buttonSearchBarIcon
+{
+    display: none;
+}
 .filtersSection
 {
     font-family: 'Raleway';
@@ -470,13 +474,182 @@ section.footer
     font-weight: bold;
     padding-top: 20px;
     box-shadow: 0 0 20px -10px rgba(0,0,0,0.5);
-    top: 90%;
+    bottom: 0px;
     width: 100%;
     height: 30px;
     border-radius: 0 0 25px 25px;
     background-color: white;
 }
 
+/* affichage tablette */
+@media screen and (max-width : 1025px) {
+    .topNav 
+    {
+        flex-wrap: wrap;
+        height: auto;
+    }
+    .topNav img
+    {
+        margin: 0 35px;
+    }
+    .topNav div {
+        width: 50%;
+        height: 55px;
+    }
+    .topNav div:nth-child(2) {
+        order: 3;
+    }
+    .topNav div:nth-child(3) {
+        order: 4;
+    }
+    .topNav div:nth-child(4) {
+        order: 2;
+    }
+    .topNav a  
+    {
+        width: 100%;
+    }
+    .topNav .link a:hover {
+        border-top: transparent 2px solid;
+        border-bottom: #0065FC 2px solid;
+    }
+    main 
+    {
+        margin: 0;
+        max-width: none;
+    }
+    .searchSection
+    {
+        width: 90%;
+        margin: auto;
+    }
+    .searchBar
+    {
+        margin-bottom: 20px;
+        width: 90%;
+    }
+    .barSearchBar
+    {
+        width: 150px;
+    }
+    .filtersSection
+    {
+        display: flex;
+        flex-flow: wrap row;
+        align-items: center;
+        width: 90%;
+        margin:auto;
+    }
+    .filter
+    {
+        margin: 5px 5px;
+        width: auto;
+    }
+    .indication
+    {
+        justify-content: flex-start;
+        width: 90%;
+        margin: 10px auto;
+    }
+    .container
+    {
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+    .populaire
+    {
+        max-width: 100%;
+        border-radius: 0;
+    }
+    .horizontalCard
+    {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .hebergements
+    {
+        max-width: 100%;
+        margin: 0;
+        background-color: white;
+        flex-flow: wrap row;
+    }
+    .card
+    {
+        width: 48%;
+    }
+    .card img
+    {
+        height: 145px;
+    }
+    .readMore
+    {
+        margin-left: 10px;
+        font-weight: bold;
+        font-size: 17px; 
+    }
+    .containerActivites
+    {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 0px;
+    }
+    .titleSection
+    {
+        width: 95%;
+        margin: auto;
+    }
+    .galery > div 
+    {
+        width: 100%;
+        flex-direction: row;
+        height: 100%;
+    }
+    .galery > div:nth-child(2), .galery > div:nth-child(4)
+    {
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: auto;
+        height: 100%;
+    }
+    .columnGalery > div
+    {
+        width: 47%;
+    }
+    .galery
+    {
+        width: 95%;
+        height: auto;
+        margin: auto;
+        flex-direction: column;
+    }
+    .galeryCard
+    {
+        width: 100%;
+        height: auto;
+        margin-bottom: 20px;
+    }
+    .galeryCard img
+    {
+        height: 250px; 
+    }
+    footer 
+    {
+        width: 100%;
+    }
+    section.footer 
+    {
+        flex-direction: row;
+    }
+    .footerListe 
+    {
+        width: 90%;
+        margin: 0 5px;
+    }
+}
+
+/* affichage mobile */
 @media screen and (max-width : 767px) {
     .topNav 
     {
@@ -526,6 +699,14 @@ section.footer
     .barSearchBar
     {
         width: 150px;
+    }
+    .buttonSearchBarIcon
+    {
+        display: initial;
+    }
+    .buttonSearchBarText
+    {
+        display: none;
     }
     .filtersSection
     {
@@ -596,11 +777,16 @@ section.footer
         width: 90%;
         margin: auto;
     }
-    .galery > div 
+    .galery > div:nth-child(2), .galery > div:nth-child(4)
     {
         width: 100%;
         flex-direction: column;
+        margin: auto;
         height: 100%;
+    }
+    .columnGalery > div
+    {
+        width: 100%;
     }
     .galery
     {
@@ -651,7 +837,7 @@ section.footer
     }
     .footerListe 
     {
-        width: 90%;
+        width: 100%;
     }
     section.footer 
     {
